--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
 
+# Jupyter Notebook
+.ipynb_checkpoints/
+
+# Virtual Environment
+venv/
+env/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Model files
+*.h5
+*.pkl
+*.joblib
